# CryptoTax

./: Cargo.toml  LICENSE  README.md
docs/: config.yaml  gains.md
docs/example/: .price_cache  cashflows.csv  output.txt  transactions.csv
src/: app.rs  config.rs  inventory.rs  main.rs  parser.rs  prices.rs
src/accounting/: accountant.rs  mod.rs  reports.rs
src/accounting/calculation/: inventory.rs  mod.rs
src/prices/: mod.rs
