[package]
name = "capital_tax"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.8.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.21"
csv = "1.1.6"
